Fixed image alignments

--- a/assets/css/Article-Clean.css
+++ b/assets/css/Article-Clean.css
@@ -82,3 +82,9 @@
   max-width: 100%;
 }
 
+img {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
