--- a/assets/css/Standard-Picture-Header.css
+++ b/assets/css/Standard-Picture-Header.css
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 * {
-  border-radius: 0px !important;
+  /*border-radius: 0px !important;*/
 }
 
 p {
